Bug 459125 - KNewStuff fails to compile statically with widgets/action.h:68:57: error: 'KF5NewStuffWidgets_EXPORTS' is not defined, evaluates to 0
Summary: KNewStuff fails to compile statically with widgets/action.h:68:57: error: 'KF...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.98.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-14 20:37 UTC by Dawid Wróbel
Modified: 2022-11-17 17:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Wróbel 2022-09-14 20:37:22 UTC
SUMMARY
While compiling with -DBUILD_SHARED_LIBS=OFF, getting the:

In file included from /Users/cromo/Documents/Sourcecode/vcpkg/buildtrees/kf5newstuff/src/v5.98.0-c49e20fd43.clean/src/widgets/action.cpp:8:
/Users/cromo/Documents/Sourcecode/vcpkg/buildtrees/kf5newstuff/src/v5.98.0-c49e20fd43.clean/src/widgets/action.h:68:57: error: 'KF5NewStuffWidgets_EXPORTS' is not defined, evaluates to 0 [-Werror,-Wundef]
#if !KNEWSTUFFWIDGETS_ENABLE_DEPRECATED_SINCE(5, 90) || KF5NewStuffWidgets_EXPORTS
                                                        ^
/Users/cromo/Documents/Sourcecode/vcpkg/buildtrees/kf5newstuff/src/v5.98.0-c49e20fd43.clean/src/widgets/action.cpp:82:35: error: no viable conversion from 'const QList<KNSCore::EntryInternal>' to 'const QList<KNS3::Entry>'
            Q_EMIT dialogFinished(changedInternalEntries);
                                  ^~~~~~~~~~~~~~~~~~~~~~
/Users/cromo/Documents/Sourcecode/vcpkg/vcpkg_installed/arm64-osx/include/qt5/QtCore/qlist.h:161:5: note: candidate constructor not viable: no known conversion from 'const QList<KNSCore::EntryInternal>' to 'const QList<KNS3::Entry> &' for 1st argument
    QList(const QList<T> &l);
    ^
/Users/cromo/Documents/Sourcecode/vcpkg/vcpkg_installed/arm64-osx/include/qt5/QtCore/qlist.h:164:12: note: candidate constructor not viable: no known conversion from 'const QList<KNSCore::EntryInternal>' to 'QList<KNS3::Entry> &&' for 1st argument
    inline QList(QList<T> &&other) noexcept
           ^
/Users/cromo/Documents/Sourcecode/vcpkg/vcpkg_installed/arm64-osx/include/qt5/QtCore/qlist.h:169:12: note: candidate constructor not viable: no known conversion from 'const QList<KNSCore::EntryInternal>' to 'std::initializer_list<Entry>' for 1st argument
    inline QList(std::initializer_list<T> args)
           ^


SOFTWARE/OS VERSIONS
macOS: 12.6
Qt Version: 5.15.6
Comment 1 Dawid Wróbel 2022-09-14 20:49:18 UTC
The `KF5NewStuffWidgets_EXPORTS' is not defined, evaluates to 0` issue is likely not specific to static compilation, but rather because of the clang's default -Werror,-Wundef
Comment 2 Bug Janitor Service 2022-09-14 20:57:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/208
Comment 3 Bug Janitor Service 2022-09-15 13:33:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/209
Comment 4 Alexander Lohnau 2022-11-17 17:52:43 UTC
Git commit df228a446c71efa0816ba24e8a36cd192d07c99e by Alexander Lohnau.
Committed on 17/11/2022 at 17:52.
Pushed by alex into branch 'master'.

Fix static compilation of KF5NewStuffWidgets module

The flag is not set during static builds. Thus we need to set the compile definition manually.

M  +3    -0    src/widgets/CMakeLists.txt
M  +1    -1    src/widgets/action.h

https://invent.kde.org/frameworks/knewstuff/commit/df228a446c71efa0816ba24e8a36cd192d07c99e