Fix KF5NewStuffWidgets_EXPORTS is not defined on clang

BUG: 459125